new loader and first test

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -9,6 +9,19 @@ h6 {
   margin: 0;
 }
 
+#loader {
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  background-color: #FFFFFFAA;
+  h1 {
+    color: #656565;
+  }
+}
+
 .title {
   font-weight: bold;
 }
