--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -9,15 +9,17 @@ h6 {
   margin: 0;
 }
 
-#loader {
+#loader, #offline {
   width: 100vw;
   height: 100vh;
   display: none;
   position: fixed;
+  text-align: center;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
-  background-color: #FFFFFFAA;
-  h1 {
+  background-color: #FFFFFFE0;
+  h1, p {
     color: #656565;
   }
 }
