new errors overlays for status 408 and 500

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -9,7 +9,7 @@ h6 {
   margin: 0;
 }
 
-#loader, #offline, #error {
+#loader, #offline, #error, #error-408, #error-500 {
   width: 100vw;
   height: 100vh;
   display: none;
